# ai-ethics-law-mini-project

./: PROCESS.md  README.md  pyproject.toml
notebooks/: summary_report.ipynb
src/: dataset.py
src/models/: baseModel.py  run_benchmark.py
src/models/pointMLP/: pointMLP.py
src/models/pointneXt/: pointneXt.py
src/models/pointnet/: pointnet.py
src/models/pointnet2/: pointnet2.py
src/scripts/: run_point_lime.py  run_point_shap.py
wyniki/: results_classification.md  user_study_results.csv
